Fix subpixel border issue
**What?**
In some browsers subpixel heights are rounded in tables.
This was causing the discussion border to be hidden because the
content overflowed.
Adding `padding-bottom: 1px` basically overrides this rounding.

https://gitlab.com/gitlab-org/gitlab-ce/issues/53973

--- a/app/assets/stylesheets/pages/notes.scss
+++ b/app/assets/stylesheets/pages/notes.scss
@@ -468,6 +468,7 @@ $note-form-margin-left: 72px;
       &.notes-content {
         border-width: 1px 0;
         padding: 0;
+        padding-bottom: 1px; // Fixes subpixel rounding issue https://gitlab.com/gitlab-org/gitlab-ce/issues/53973
         vertical-align: top;
         white-space: normal;
 
